feat: add Aurora configuration support with tag enforcement
Agent-Id: agent-77c82f02-6d7c-4d17-8d9d-242fd3966d75
Linked-Note-Id: 2a9fb0a8-1c73-4f0d-bb94-fd5f8ef3de7c

--- a/config/tapdb-config-example.yaml
+++ b/config/tapdb-config-example.yaml
@@ -31,3 +31,17 @@ environments:
     user: tapdb_admin
     password: "CHANGEME"
     database: tapdb_prod
+
+  # Aurora (AWS RDS) environments use engine_type: aurora
+  # and require additional aurora-specific fields.
+  aurora_dev:
+    engine_type: aurora
+    host: tapdb-dev-cluster.cluster-xxxxxxxxxxxx.us-west-2.rds.amazonaws.com
+    port: 5432
+    user: tapdb_admin
+    password: ""
+    database: tapdb_dev
+    region: us-west-2
+    cluster_identifier: tapdb-dev-cluster
+    iam_auth: true
+    ssl: true
