--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,12 @@ target-version = ["py310", "py311", "py312"]
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
+
+[tool.ruff.lint.per-file-ignores]
+"daylily_tapdb/models/*.py" = ["N801"]
 
 [tool.mypy]
 python_version = "3.10"
