--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 
 on:
   pull_request:
+  push:
+    branches: [main, tapdb-aurora-support]
 
 jobs:
   tests:
@@ -38,7 +40,10 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev,cli]"
+          pip install -e ".[dev,cli,aurora]"
+
+      - name: Lint
+        run: ruff check daylily_tapdb tests
 
       - name: Run tests
         run: pytest -q
