--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "daylily-tapdb"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Templated Abstract Polymorphic Database - A flexible object model library"
 readme = "README.md"
 license = {text = "MIT"}
@@ -113,3 +113,10 @@ python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+
+
+[tool.setuptools_scm]
+version_scheme = "guess-next-dev"
+local_scheme = "no-local-version"
+write_to = "daylily_tapdb/_version.py"
+write_to_template = "__version__ = \"{version}\"\n"
